--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "eslint": "^8.57.0",
     "prettier": "^3.3.2",
     "vite": "^5.3.3"
+  },
+  "dependencies": {
+    "kind-tiger": "^1.0.1"
   }
 }
