--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+	"clean": "rm -rf docs"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
