--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-	"clean": "rm -rf docs"
+    "clean": "rm -rf docs"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
@@ -15,6 +15,7 @@
     "vite": "^5.3.3"
   },
   "dependencies": {
-    "kind-tiger": "^1.0.1"
+    "kind-tiger": "^1.0.1",
+    "pocketbase": "^0.21.3"
   }
 }
